Bug 520905 - collapse callee saved register spills/reloads into LDMIA/STMIA instructions, r=vlad.