js/src/nanojit/Native.h
@@ -127,6 +127,15 @@ namespace nanojit {
 
 namespace nanojit {
 
+    inline Register nextreg(Register r) {
+        return Register(r+1);
+    }
+
+    inline Register prevreg(Register r) {
+        return Register(r-1);
+    }
+
+
     class Fragment;
     struct SideExit;
     struct SwitchInfo;
