js/src/nanojit/NativeX64.h
@@ -563,10 +563,6 @@ namespace nanojit
     // Bytes of icache to flush after Assembler::patch
     const size_t LARGEST_BRANCH_PATCH = 16 * sizeof(NIns);
 
-    inline Register nextreg(Register r) {
-        return Register(r+1);
-    }
-
 } // namespace nanojit
 
 #endif // __nanojit_NativeX64__
